[package]
name = "aeon_derive"
version = "0.2.0"
authors = ["Szune <erikiwarson@gmail.com>"]
edition = "2018"
description = "Derive macros for package 'aeon'."
readme = "../README.md"
repository = "https://github.com/Szune/aeon-rs"
license = "MIT"
categories = ["config", "parser-implementations"]
keywords = ["serializer", "deserializer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.39"
quote = "1.0.7"
proc-macro2 = "1.0.19"
