[package]
name = "aeon_derive"
version = "0.5.0"
authors = ["Szune <szuneghub@kastaintestenar.org>"]
edition = "2018"
description = "Derive macros for package 'aeon'."
readme = "../README.md"
repository = "https://github.com/Szune/aeon-rs"
license = "MIT"
categories = ["config", "parser-implementations"]
keywords = ["serializer", "deserializer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
aeon_derive_utils = "0.1.0"
