[package]
name = "aeon"
version = "0.4.0"
authors = ["Szune <erikiwarson@gmail.com>"]
edition = "2018"
description = "A configuration file format with macros for brevity."
readme = "../README.md"
repository = "https://github.com/Szune/aeon-rs"
license = "MIT"
categories = ["config", "parser-implementations"]
keywords = ["serializer", "deserializer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]

