[package]
name = "aeon"
version = "0.5.0"
authors = ["Szune <szuneghub@kastaintestenar.org>"]
edition = "2021"
description = "A configuration file format with macros for brevity."
readme = "../README.md"
repository = "https://github.com/Szune/aeon-rs"
license = "MIT"
categories = ["config", "parser-implementations"]
keywords = ["serializer", "deserializer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
